# katharsis

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  INSTALL.md  LICENSE  NOTICE  README.md  SECURITY.md  USE.md  deny.toml  sgconfig.yml
.github/: dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: help.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  doc.yml  ex.yml  feat.yml  test.yml
.github/workflows/: audit.yml  cd.yml  ci.yml  pr-audit.yml
etc/cd/: before_deploy.sh
examples/nextjs/: README.md  katharsis.config.toml
examples/nextjs/.next/server/app/articles/: alpha.html  beta.html
src/: lib.rs  main.rs
src/arg/: handle.rs
src/cmd/: handle.rs  katharsis.config.toml
src/error/: app.rs
tests/: arg.rs  cmd.rs  katharsis.config.toml
