[package]
name = "katharsis"
version = "1.0.0-canary.5"
edition = "2021"
description = "CLI tool for generating RSS feeds."

[lints.clippy]
pedantic = "warn"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive", "env"] }
glob = "0.3.1"
inquire = "0.7.5"
rss = "2.0.11"
scraper = "0.22.0"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
toml = "0.8.19"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.14.0"
